normalize structure a bit, move foundy factory to tests

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,6 +31,6 @@ services:
     GuzzleHttp\ClientInterface:
         class: GuzzleHttp\Client
 
-    App\ExchangeRatesApiIO\Client\ExchangeRatesApiIOClient:
+    App\Transaction\ExchangeRatesApiIO\Client\ExchangeRatesApiIOClient:
         calls:
             - setLogger: ['@monolog.logger']
